# advent-of-code-2020

./: Makefile  README.md  index.pl  pyproject.toml  tester.lgt
.github/workflows/: ci.yml
day1/: Day1.hs  Test.hs  day1.pl  star.pl  star1.py  star2.py  test_day1.py
day10/: day10.pl
day11/: day11.py  day112.py
day12/: day12.pl
day13/: day13.pl
day14/: day14.pl
day15/: day15.pl
day16/: day16.pl
day17/: day17.pl
day18/: day18.pl
day19/: day19.pl
day2/: day2.pl  star1.py  star2.py  test_day2.py
day20/: day20.pl
day21/: day21.pl
day22/: day22.pl
day23/: day23.pl  day23.py
day24/: day24.pl
day25/: day25.pl
day3/: day3.pl
day4/: day4.pl
day5/: day5.pl  scr_day5.pl
day6/: day6.pl
day7/: day7.pl
day8/: day8.pl
day9/: day9.pl
test/: day1.lgt  day10.lgt  day11.lgt  day12.lgt  day13.lgt  day14.lgt  day15.lgt  day16.lgt  day17.lgt  day18.lgt  day19.lgt  day2.lgt  day20.lgt  day21.lgt  day22.lgt  day23.lgt  day24.lgt  day25.lgt  day3.lgt  day4.lgt  day5.lgt  day6.lgt  day7.lgt  day8.lgt  day9.lgt
